<resources>
    <string name="app_name">Quizz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email .......</string>
    <string name="not_registered_yet_sign_up">Not registered Yet ? Sign Up</string>
    <string name="welcome_to_quizzy_app">Welcome to Quizzy App</string>
    <string name="client_id">1074782737467-b57prolkf1l8vu5jgk8fmq6me60ic7p0.apps.googleusercontent.com</string>
    <string name="by_using_our_app_you_agree_our_terms_and_condition_and_privacy_policy">By using our app, you agree our Terms and Condition and Privacy policy</string>
    <string name="difficulty">Difficulty :</string>
    <string name="total_questions">Total Questions :</string>
    <string name="na">NA</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="todo">TODO</string>
    <string name="c_programming">C programming</string>
    <string name="title">Title :</string>
    <string name="textview">TextView</string>
    <string name="questions">Questions</string>
    <string name="_10">10</string>
    <string name="_1">1</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="next_question">Next Question</string>
    <string name="verify_answer">verify answer</string>
    <string name="go_to_home">Go To Home</string>
    <string name="result">Result</string>
    <string name="correct_answers">Correct Answers :</string>
    <string name="wrong_answers">Wrong Answers :</string>
    <string name="not_answered_questions">Not Answered Questions :</string>
    <string name="achievement">Achievement</string>
    <string name="total_time">Total Time :</string>
    <string name="userid">UserID :</string>
    <string name="no_1">No.1</string>
    <string name="ranking">Ranking</string>
    <string name="new_set_of_quiz">New Set Of Quiz</string>
    <string name="buy_new_set_quizz">Buy New Set Quizz</string>
    <string name="personal_information">Personal Information</string>
</resources>